--- a/style.css
+++ b/style.css
@@ -310,6 +310,11 @@ body.dark-mode textarea {
   border-color: #555;
 }
 
+/* Remove Safari's gradient on selects in dark mode */
+body.dark-mode select {
+  background-image: none;
+}
+
 body.dark-mode #setupSelect,
 body.dark-mode #setupName {
   background-color: #333;
