--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ p {
 
 /* Ensure dropdowns use a solid background across browsers */
 select {
+  padding: 4px;
+  font-size: 1em;
+  background-color: #e8e8e8; /* Grey background */
+  color: #333; /* Darker text color */
+  border: 0px solid #ccc; /* Light grey border */
+  border-radius: 5px;
   background-image: none;
   -webkit-appearance: none;
   appearance: none;
