--- a/style.css
+++ b/style.css
@@ -54,21 +54,7 @@ p {
   margin: 5px 5px 0 0;
 }
 
-/* smaller width for search inputs */
-.form-row .filter-input {
-  flex: 0 0 120px;
-}
-
-.select-wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-.select-wrapper .filter-input {
-  flex: none;
-  margin-bottom: 2px;
-}
-
+/* list filter inputs */
 .device-category .list-filter {
   width: 100%;
   margin-bottom: 5px;
