--- a/style.css
+++ b/style.css
@@ -54,9 +54,10 @@ p {
   margin: 5px 5px 0 0;
 }
 
-/* smaller width for search inputs */
-.form-row .filter-input {
-  flex: 0 0 120px;
+/* list filter inputs */
+.device-category .list-filter {
+  width: 100%;
+  margin-bottom: 5px;
 }
 
 /* Ensure dropdowns use a solid background across browsers */
