--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ p {
 .device-category .list-filter {
   width: 100%;
   margin-bottom: 5px;
+  font-size: 0.9em;
 }
 
 /* Ensure dropdowns use a solid background across browsers */
