--- a/style.css
+++ b/style.css
@@ -60,6 +60,9 @@ p {
   align-self: flex-end;
   margin: 5px 0 0 0;
 }
+.form-row > button + button {
+  margin-left: 5px;
+}
 
 /* Small wrapper to show labels even when a value is present */
 .field-with-label {
@@ -446,6 +449,16 @@ body.dark-mode .field-with-label::before {
     width: auto;
     min-width: auto;
     margin-bottom: 4px;
+  }
+
+  .form-row > button {
+    width: 100%;
+    margin: 5px 0 0 0;
+  }
+
+  .form-row > button + button {
+    margin-left: 0;
+    margin-top: 5px;
   }
 
   .device-list-container {
