--- a/style.css
+++ b/style.css
@@ -359,6 +359,15 @@ button:disabled {
   stroke-width: 2px;
   fill: none;
 }
+#setupDiagram path.power {
+  stroke: #d33;
+}
+#setupDiagram path.video {
+  stroke: #369;
+}
+#setupDiagram path.fiz {
+  stroke: #090;
+}
 
 #setupDiagram .diagram-placeholder {
   font-style: italic;
@@ -381,6 +390,15 @@ body.dark-mode #setupDiagram line {
 
 body.dark-mode #setupDiagram path.edge-path {
   stroke: #fff;
+}
+body.dark-mode #setupDiagram path.power {
+  stroke: #ff6666;
+}
+body.dark-mode #setupDiagram path.video {
+  stroke: #7ec8ff;
+}
+body.dark-mode #setupDiagram path.fiz {
+  stroke: #6f6;
 }
 
 body.dark-mode #setupDiagram marker polygon {
