--- a/style.css
+++ b/style.css
@@ -414,7 +414,13 @@ body.dark-mode .diagram-popup {
   stroke: #3367d6;
 }
 #setupDiagram .node-box.first-fiz {
+  stroke: #3367d6;
+}
+
+#setupDiagram .fiz-border-grad {
+  fill: none;
   stroke: url(#firstFizGrad);
+  stroke-width: 1px;
 }
 
 #setupDiagram .node-icon {
@@ -463,6 +469,10 @@ body.dark-mode #setupDiagram .node-box {
   stroke: #ddd;
 }
 body.dark-mode #setupDiagram .node-box.first-fiz {
+  stroke: #ddd;
+}
+
+body.dark-mode #setupDiagram .fiz-border-grad {
   stroke: url(#firstFizGrad);
 }
 
