--- a/style.css
+++ b/style.css
@@ -442,6 +442,16 @@ button:disabled {
   min-width: 32px;
 }
 
+#diagramHint {
+  margin-top: 0.25em;
+  font-size: 12px;
+  color: #555;
+}
+
+body.dark-mode #diagramHint {
+  color: #ccc;
+}
+
 .diagram-popup {
   display: none;
   position: absolute;
