--- a/style.css
+++ b/style.css
@@ -530,6 +530,7 @@ button:disabled {
   padding: 2px 6px;
   margin: 2px;
   border-radius: 3px;
+  border: 1px solid;
   background: rgba(0,0,0,0.03);
   font-size: 0.75em;
 }
