Ensure accurate colors in printed overview

--- a/overview-print.css
+++ b/overview-print.css
@@ -7,6 +7,8 @@ body {
   background: #fff;
   color: #000;
   font-size: 12pt;
+  -webkit-print-color-adjust: exact;
+  print-color-adjust: exact;
 }
 
 h1 {
